[package]
name = "htb"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/htb"
license = "MIT"

edition = "2018"

[dependencies]
tokio = { version = "^0.2", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.10", features = ["json"] }
prettytable-rs = "^0.8"
colored = "1.9"
dirs = "^2.0"
termion = "^1.5"
linefeed = "0.6"
htmlescape = "0.3.1"
libnotify = "^1.0"
chrono = "0.4"
lazy_static = "^1.4"
async-trait = "0.1.30"